fixed z-index so carousel buttons work

--- a/src/components/downArrow/downArrow.css
+++ b/src/components/downArrow/downArrow.css
@@ -1,7 +1,7 @@
 /* Media query for mobile large (max-width: 767px) */
 @media (max-width: 768px) { .arrow-icon {
   position: absolute;
-  z-index: 1000;
+  /* z-index: 1000; */
   left: 44.3vw;
   top: 97vh;
   animation: bounce 1.5s infinite;
